# Battleship

./: Abilities.cpp  Abilities.h  AbilityManager.cpp  AbilityMananger.h  AbilityStatus.h  CMakeLists.txt  Exceptions.h  Field.cpp  Field.h  Game.cpp  Game.h  GameController.hpp  Input.cpp  Input.h  InteractionWithFile.cpp  Output.cpp  Output.hpp  OutputConsole.cpp  OutputConsole.hpp  README.md  Ship.cpp  Ship.h  ShipManager.cpp  ShipManager.h  State.cpp  State.h  commands.json
headers/: Abilities.h  AbilityMananger.h  Exceptions.h  Field.h  Game.h  Input.h  InteractionWithFile.h  OutputManager.hpp  Ship.h  ShipManager.h  State.h
src/: Abilities.cpp  AbilityManager.cpp  Exeption.cpp  Field.cpp  Game.cpp  Input.cpp  InteractionWithFile.cpp  OutputConsole.cpp  Ship.cpp  ShipManager.cpp  State.cpp  main.cpp
